2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (GZIP_ENV): Define.
	* automake.in (&handle_dist): Don't.
	(&uniq): New.
	(&handle_dist_worker, &am_install_var): Use it.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (distdir): Handle the DIST-TARGETS.
	* automake.in (&handle_dist_worker): Don't.

	
2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Transform the global options (such
	as CYGNUS).
	(&handle_texinfo, &handle_dist_worker, &handle_tests_dejagnu): Don't.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (distdir): Be sure to have permissive rights on its
	contents.
	(dist-all, dist-bzip2, dist-zip, dist-tarZ): New conditional
	targets.
	And BTW, all these guys are phony.
	* automake.in (&handle_dist_worker): As its name doesn't indicate,
	output distributions.
	(&handle_dist): As its name doesn't indicate, don't.
	(&initialize_global_constants): Don't define variables which
	content is now handled by distdir.am.
	But register `dist-all' as a factored target.
	(&handle_factored_dependencies): Don't output empty targets.

2001-02-20  Tom Tromey  <tromey@redhat.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Simplify m4_pattern_allow
	invocation.

2001-02-18  Tom Tromey  <tromey@redhat.com>

	* m4/strip.m4 (AM_PROG_INSTALL_STRIP): Don't call AM_PROG_STRIP.
	Set INSTALL_STRIP_PROGRAM_ENV to `$(STRIP)', not `$STRIP'.
	(AM_PROG_STRIP): Commented out.

2001-02-17  Raja R Harinath  <harinath@cs.umn.edu>

	* depcomp (gcc3): Protect against the compiler deleting 
	the dependency output file.

2001-02-17  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_merge_targets): Use double quotes around
	setting of INSTALL_STRIP_PROGRAM.
	* m4/strip.m4 (AM_PROG_INSTALL_STRIP): Set INSTALL_STRIP_PROGRAM
	to absolute path at runtime.
	(AM_PROG_STRIP): Don't explicitly test $STRIP.

2001-01-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/strip.m4: New file.
	* m4/Makefile.am (m4data_DATA): Add strip.m4.