@@ -1,5 +1,15 @@
 2001-02-21  Akim Demaille  <akim@epita.fr>
 
+	* dist.am: Remove, merge into...
+	* distdir.am: here.  Use the neat sed snippet for banners.
+	BTW, distcheck is phony.
+	* automake.in (&handle_dist_worker): Remove, merge into...
+	(&handle_dist): this.
+	(&file_contents): Strip leading new lines.
+	Be sure to end comments with new lines.
+
+2001-02-21  Akim Demaille  <akim@epita.fr>
+
 	* distdir.am (GZIP_ENV): Define.
 	* automake.in (&handle_dist): Don't.
 	(&uniq): New.
